fixed second navbar text overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ hr {
 #container {
   text-align: center;
   background-color: #F0DAA1;
-  height: 45px;
+  height: 40px;
   border-bottom: 1px solid #D3D3D3;
   color: '#343434';
 }
